@@ -46,6 +46,11 @@
             <artifact name="zookeeper" type="jar" ext="jar"/>
             <artifact name="zookeeper" type="test-jar" ext="jar" m:classifier="tests"/>
         </dependency>
-	<dependency org="org.apache.thrift" name="libthrift" rev="${thrift.version}" conf="common->master"/>
+
+    <!-- hbase test dependencies -->
+    <dependency org="com.github.stephenc.high-scale-lib" name="high-scale-lib" rev="${high-scale-lib.version}" conf="common->master" />
+    <dependency org="com.google.guava" name="guava" rev="${guava.version}" conf="common->master" />
+    <dependency org="org.mortbay.jetty" name="jetty" rev="${jetty.version}" conf="common->master" />
+
     </dependencies>
 </ivy-module>
