@@ -32,6 +32,9 @@
     <property name="repo.maven.org" value="${mvnrepo}" override="true"/>
     <property name="maven2.pattern"  value="[organisation]/[module]/[revision]/[module]-[revision](-[classifier])"/>
     <property name="maven2.pattern.ext" value="${maven2.pattern}.[ext]"/>
+    <property name="asfrepo" value="https://repository.apache.org"/>
+    <property name="asfsnapshotrepo" value="${asfrepo}/content/repositories/snapshots"/>
+    <property name="snapshot.pattern"  value="[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"/>
     <!-- pull in the local repository -->
     <include url="${ivy.default.conf.dir}/ivyconf-local.xml"/>
     <settings defaultResolver="default"/>
@@ -43,10 +46,11 @@
                 pattern="[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]" />
 
         <ibiblio name="maven2" root="${repo.maven.org}" pattern="${maven2.pattern.ext}" m2compatible="true"/>
+        <ibiblio name="asf-snapshots" root="${asfsnapshotrepo}" pattern="${snapshot.pattern}" checkmodified="true" m2compatible="true"/>
         <chain name="default" dual="true">
             <resolver ref="local"/>
             <resolver ref="maven2"/>
-            <resolver ref="jboss"/>
+            <resolver ref="asf-snapshots"/>
         </chain>
         <chain name="internal">
             <resolver ref="local"/>
