@@ -16,6 +16,8 @@
 junit.version=3.8.1
 ivy.version=2.2.0
 rats-lib.version=0.5.1
-hbase.version=0.90.5
-zookeeper.version=3.4.0
-thrift.version=0.7.0
+hbase.version=0.92.0-SNAPSHOT
+zookeeper.version=3.4.3
+guava.version=11.0
+jetty.version=6.1.26
+high-scale-lib.version=1.1.1
